--- a/index.html
+++ b/index.html
@@ -9,7 +9,29 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="build/css/app.css">
 </head>
+
 <body>
-    
+    <header class="header header-inicio">
+        <div class="contenido-header contenedor">
+            <div class="barra">
+                <div class="logo">
+
+                </div>
+
+                <div class="nav-principal">
+                    <a href="index.html">Inicio</a>
+                    <a href="nosotros.html">Nosotros</a>
+                    <a href="proceso.html">Proceso</a>
+                    <a href="menu.html">Menú</a>
+                    <a href="galeria.html">Galería</a>
+                    <a href="contacto.html">Contacto</a>
+                </div>
+            </div>
+
+            <div class="texto-header">
+                <h1>Disfruta Una Deliciosa Taza De Café</h1>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
