--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="contenido-header contenedor">
             <div class="barra">
                 <div class="logo">
-
+                    <img src="build/img/logo.svg" alt="logo cafeteria">
                 </div>
 
                 <div class="nav-principal">
