Seccion sobre nosotros

--- a/index.html
+++ b/index.html
@@ -33,5 +33,11 @@
             </div>
         </div>
     </header>
+
+    <main class="contenedor contenido-principal text-center">
+        <h2><span>Conoce mas</span> sobre nosotros</h2>
+
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda excepturi rem quos deserunt, tenetur est ratione inventore ipsa ducimus iure optio, magni impedit debitis explicabo repellendus ullam saepe id repudiandae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis voluptate id modi consectetur inventore repellat quia totam, error dignissimos in recusandae minima, eos nihil nisi voluptatem omnis molestias facere atque!</p>
+    </main>
 </body>
 </html>
