Agregado mixin para grid y finalizado sector iconos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Cafetería SASS</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bona+Nova&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="build/css/app.css">
 </head>
 
@@ -35,9 +35,30 @@
     </header>
 
     <main class="contenedor contenido-principal text-center">
-        <h2><span>Conoce mas</span> sobre nosotros</h2>
+        <section class="conoce">
+            <h2><span>Conoce mas</span> sobre nosotros</h2>
 
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda excepturi rem quos deserunt, tenetur est ratione inventore ipsa ducimus iure optio, magni impedit debitis explicabo repellendus ullam saepe id repudiandae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis voluptate id modi consectetur inventore repellat quia totam, error dignissimos in recusandae minima, eos nihil nisi voluptatem omnis molestias facere atque!</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Assumenda excepturi rem quos deserunt, tenetur est ratione inventore ipsa ducimus iure optio, magni impedit debitis explicabo repellendus ullam saepe id repudiandae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis voluptate id modi consectetur inventore repellat quia totam, error dignissimos in recusandae minima, eos nihil nisi voluptatem omnis molestias facere atque!</p>
+        </section>
+
+        <section class="iconos">
+            <ul class="listado-iconos">
+                <li>
+                    <img src="build/img/icono_cafe.svg" alt="icono café">
+                    <p>Café</p>
+                </li>
+
+                <li>
+                    <img src="build/img/icono_postre.svg" alt="icono postre">
+                    <p>Postre</p>
+                </li>
+
+                <li>
+                    <img src="build/img/icono_te.svg" alt="icono té">
+                    <p>Té</p>
+                </li>
+            </ul>
+        </section>
     </main>
 </body>
 </html>
