Agregado CSS al testimonial

--- a/index.html
+++ b/index.html
@@ -173,5 +173,15 @@
             </section>
         </div>
     </section>
+
+    <section class="nuestros-testimoniales contenedor bg-white margin-negativo-10">
+        <h2><span>Lo que dicen nuestros</span> Clientes</h2>
+
+        <div class="testimonial">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus libero dolore adipisci amet provident quis eaque hic odit doloribus reiciendis vero delectus eum praesentium officiis iste nesciunt a, sapiente commodi.</p>
+
+            <p class="autor">- Fernando Saucedo</p>
+        </div>
+    </section>
 </body>
 </html>
