Agregado Footer en HTML

--- a/index.html
+++ b/index.html
@@ -183,5 +183,27 @@
             <p class="autor">- Fernando Saucedo</p>
         </div>
     </section>
+
+    <footer class="footer">
+        <div class="contenedor footer-contenido">
+            <div class="footer-box ubicacion">
+                <h3>Ubicación</h3>
+                <p>Nicolas Coérnico 5990</p>
+                <p>Buenos Aires, Argentina</p>
+            </div>
+            <div class="footer-box reservacion">
+                <h3>Reservación</h3>
+                <p>Tel. 2143-9102</p>
+                <a href="tel:+21439102">Llamar</a>
+            </div>
+            <div class="footer-box horario">
+                <h3>Horario</h3>
+                <p>Lun-Jue: 11:00 - 22:00</p>
+                <p>Vie-Sab 09:00 - 00:00</p>
+                <p>Domingo: Cerrado</p>
+            </div>
+        </div>
+        <p class="copyright">Todos los derechos reservados. La Cafetería</p>
+    </footer>
 </body>
 </html>
