--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     </section>
 
     <footer class="footer">
-        <div class="contenedor footer-contenido">
+        <div class="contenedor contenido-footer bg-white">
             <div class="footer-box ubicacion">
                 <h3>Ubicación</h3>
                 <p>Nicolas Coérnico 5990</p>
