--- a/contacto.html
+++ b/contacto.html
@@ -35,10 +35,10 @@
     </header>
 
     <main class="contenedor contenido-principal">
-        <h2><span>Reserta tu</span>Mesa</h2>
+        <h2><span>Reserva tu</span>Mesa</h2>
 
         <div class="contenido-contacto">
-            <form action="">
+            <form class="formulario">
                 <div class="campo">
                     <label for="nombre">Nombre:</label>
                     <input type="text" id="nombre" placeholder="Tu Nombre">
